Fix head rotation and add margin to make body more visible

--- a/styles.css
+++ b/styles.css
@@ -40,8 +40,9 @@ body, html {
 
 .snake-body {
   background: goldenrod;
-  width: 30px;
-  height: 30px;
+  width: 28px;
+  height: 28px;
+  margin: 1px;
   position: absolute;
 }
 
